# mpc-cmp-testing

./: .gitignore  CMakeLists.txt  README.md  test_bip32_checks.cpp  test_bip44_paths.cpp  test_null_context.cpp
